--- a/src/sass/_gdpr-cookie-notice.scss
+++ b/src/sass/_gdpr-cookie-notice.scss
@@ -14,6 +14,19 @@ $modal_primary: rgb(26,213,108);
 $icon_checkmark: 'data:image/svg+xml;utf8,<svg height="11" viewBox="0 0 14 11" width="14" xmlns="http://www.w3.org/2000/svg"><path d="m5 10.42-5-5 1.41-1.41 3.59 3.58 7.59-7.59 1.41 1.42z" fill="rgb(255,255,255)" fill-rule="evenodd"/></svg>';
 $icon_caret: 'data:image/svg+xml;utf8,<svg height="12" viewBox="0 0 8 12" width="8" xmlns="http://www.w3.org/2000/svg"><path d="m1.41 0-1.41 1.41 4.58 4.59-4.58 4.59 1.41 1.41 6-6z" fill="'+$bar_primary+'"/></svg>';
 
+.gdpr-cookie-notice-settings{
+  position: fixed;
+  left: 20px;
+  width: auto;
+  bottom: 0px;
+
+  a{
+    color: #fff;
+  }
+  &:hover {
+    color: #fff;
+  }
+}
 .gdpr-cookie-notice {
   position: fixed;
   background: $bar_bg;
