--- a/src/sass/_gdpr-cookie-notice.scss
+++ b/src/sass/_gdpr-cookie-notice.scss
@@ -14,7 +14,7 @@ $modal_primary: rgb(3,148,166);
 $icon_checkmark: 'data:image/svg+xml;utf8,<svg height="11" viewBox="0 0 14 11" width="14" xmlns="http://www.w3.org/2000/svg"><path d="m5 10.42-5-5 1.41-1.41 3.59 3.58 7.59-7.59 1.41 1.42z" fill="rgb(255,255,255)" fill-rule="evenodd"/></svg>';
 $icon_caret: 'data:image/svg+xml;utf8,<svg height="12" viewBox="0 0 8 12" width="8" xmlns="http://www.w3.org/2000/svg"><path d="m1.41 0-1.41 1.41 4.58 4.59-4.58 4.59 1.41 1.41 6-6z" fill="'+$bar_primary+'"/></svg>';
 
-.gdpr-cookie-notice-settings{
+/*.gdpr-cookie-notice-settings{
   position: fixed;
   right: 20px;
   width: auto;
@@ -26,7 +26,7 @@ $icon_caret: 'data:image/svg+xml;utf8,<svg height="12" viewBox="0 0 8 12" width=
   &:hover {
     color: #fff;
   }
-}
+}*/
 .gdpr-cookie-notice {
   position: fixed;
   background: $bar_bg;
